fixed button not horizontal align on mobile

--- a/docs/_sass/jekyll-theme-cayman.scss
+++ b/docs/_sass/jekyll-theme-cayman.scss
@@ -28,6 +28,21 @@
 * {
   box-sizing: border-box;
 }
+
+/* If mobile device, lock screen */
+@media screen and (max-width: #{$large-breakpoint}) {
+  html {
+    transform: rotate(-90deg);
+    transform-origin: left top;
+    width: 100vh;
+    overflow-x: hidden;
+    position: absolute;
+    top: 100%;
+    left: 0;
+  }
+}
+
+
 /*
      Main Cayman settings
      ========================================================================== */
